@@ -35,9 +35,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-
 import lombok.RequiredArgsConstructor;
-
 import org.hisp.dhis.analytics.event.EnrollmentAnalyticsDimensionsService;
 import org.hisp.dhis.common.BaseIdentifiableObject;
 import org.hisp.dhis.program.Program;
@@ -49,66 +47,69 @@ import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
-class DefaultEnrollmentAnalyticsDimensionsService implements EnrollmentAnalyticsDimensionsService
-{
-    private final ProgramService programService;
+class DefaultEnrollmentAnalyticsDimensionsService implements EnrollmentAnalyticsDimensionsService {
+  private final ProgramService programService;
 
-    @Override
-    public List<BaseIdentifiableObject> getQueryDimensionsByProgramStageId( String programId )
-    {
-        return Optional.of( programId )
-            .map( programService::getProgram )
-            .filter( Program::isRegistration )
-            .map( program -> collectDimensions(
-                List.of(
-                    program.getProgramIndicators(),
-                    getProgramStageDataElements( QUERY, program ),
-                    filterByValueType( QUERY, getTeasIfRegistrationAndNotConfidential( program ),
-                        TrackedEntityAttribute::getValueType ) ) ) )
-            .orElse( Collections.emptyList() );
-    }
+  @Override
+  public List<BaseIdentifiableObject> getQueryDimensionsByProgramStageId(String programId) {
+    return Optional.of(programId)
+        .map(programService::getProgram)
+        .filter(Program::isRegistration)
+        .map(
+            program ->
+                collectDimensions(
+                    List.of(
+                        program.getProgramIndicators(),
+                        getProgramStageDataElements(QUERY, program),
+                        filterByValueType(
+                            QUERY,
+                            getTeasIfRegistrationAndNotConfidential(program),
+                            TrackedEntityAttribute::getValueType))))
+        .orElse(Collections.emptyList());
+  }
 
-    private Collection<ProgramStageDataElement> getProgramStageDataElements(
-        DimensionsServiceCommon.OperationType operationType, Program program )
-    {
-        return program.getProgramStages().stream()
-            .map( ProgramStage::getProgramStageDataElements )
-            .map( programStageDataElements -> filterByValueType(
-                operationType,
-                programStageDataElements,
-                a -> a.getDataElement().getValueType() ) )
-            .flatMap( Collection::stream )
-            .collect( Collectors.toList() );
-    }
+  private Collection<ProgramStageDataElement> getProgramStageDataElements(
+      DimensionsServiceCommon.OperationType operationType, Program program) {
+    return program.getProgramStages().stream()
+        .map(ProgramStage::getProgramStageDataElements)
+        .map(
+            programStageDataElements ->
+                filterByValueType(
+                    operationType,
+                    programStageDataElements,
+                    a -> a.getDataElement().getValueType()))
+        .flatMap(Collection::stream)
+        .collect(Collectors.toList());
+  }
 
-    @Override
-    public List<BaseIdentifiableObject> getAggregateDimensionsByProgramStageId( String programId )
-    {
-        return Optional.of( programId )
-            .map( programService::getProgram )
-            .map( program -> collectDimensions(
-                List.of(
-                    getProgramStageDataElements( AGGREGATE, program ),
-                    filterByValueType( AGGREGATE,
-                        program.getTrackedEntityAttributes(),
-                        TrackedEntityAttribute::getValueType ) ) ) )
-            .orElse( Collections.emptyList() );
-    }
+  @Override
+  public List<BaseIdentifiableObject> getAggregateDimensionsByProgramStageId(String programId) {
+    return Optional.of(programId)
+        .map(programService::getProgram)
+        .map(
+            program ->
+                collectDimensions(
+                    List.of(
+                        getProgramStageDataElements(AGGREGATE, program),
+                        filterByValueType(
+                            AGGREGATE,
+                            program.getTrackedEntityAttributes(),
+                            TrackedEntityAttribute::getValueType))))
+        .orElse(Collections.emptyList());
+  }
 
-    private Collection<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential( Program program )
-    {
-        return Optional.of( program )
-            .filter( Program::isRegistration )
-            .map( Program::getTrackedEntityAttributes )
-            .orElse( Collections.emptyList() )
-            .stream()
-            .filter( this::isNotConfidential )
-            .collect( Collectors.toList() );
-    }
+  private Collection<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(
+      Program program) {
+    return Optional.of(program)
+        .filter(Program::isRegistration)
+        .map(Program::getTrackedEntityAttributes)
+        .orElse(Collections.emptyList())
+        .stream()
+        .filter(this::isNotConfidential)
+        .collect(Collectors.toList());
+  }
 
-    private boolean isNotConfidential( TrackedEntityAttribute trackedEntityAttribute )
-    {
-        return !trackedEntityAttribute.isConfidentialBool();
-    }
-
+  private boolean isNotConfidential(TrackedEntityAttribute trackedEntityAttribute) {
+    return !trackedEntityAttribute.isConfidentialBool();
+  }
 }
